--- a/hospital_db/views/patient.xml
+++ b/hospital_db/views/patient.xml
@@ -2,16 +2,17 @@
 <odoo>
 
 
-    <record id="Collage_tree" model="ir.ui.view">
+    <record id="hospital_tree" model="ir.ui.view">
         <field name="name">Hospital.patient.tree</field>
         <field name="model">first.hospital</field>
         <field name="arch" type="xml">
             <tree string="Patient">
+
                 <field name="name"/>
                 <field name="age"/>
+                <field name="height"/>
                 <field name="notes"/>
                 <field name="image"/>
-
 
             </tree>
         </field>
@@ -34,21 +35,17 @@
                         <group>
                             <field name="age"/>
                         </group>
+                        <group>
+                            <field name="height"/>
+                        </group>
                     </group>
                     <group>
-
                         <field name="notes"/>
                         <field name="image"/>
 
                     </group>
                 </sheet>
-<!--                add chatter box to lower section of form-->
 
-<!--                <div class="oe_chatter">-->
-<!--                    <field name="message_follower_ids" widget="emial_followers" />-->
-<!--                    <field name="activity_ids" widget="emial_activity" />-->
-<!--                    <field name="message_ids" widget="emial_thread" options = "{'post_refresh':'recipents'}"/>-->
-<!--                </div>-->
             </form>
         </field>
     </record>
@@ -56,7 +53,7 @@
 
     <!--    set an action to start work -->
     <record id="action_patient" model="ir.actions.act_window">
-        <field name="name">Patient</field>
+        <field name="name">Patient Details</field>
         <field name="type">ir.actions.act_window</field>
         <field name="res_model">first.hospital</field>
         <!--        <field name = "view_type">form</field>-->
